--- a/paper/references.bib
+++ b/paper/references.bib
@@ -14,6 +14,22 @@
     url = {https://www.toronto.ca/community-people/animals-pets/pets-in-the-city/dogs-in-the-city/dog-bites-or-attacks/},
 }
 
+@Manual{torontowardprofiles,
+    title = {Ward Profiles},
+    author = {City of Toronto},
+    year = {n.d.},
+    note = {Retrieved September 26, 2024},
+    url = {https://www.toronto.ca/city-government/data-research-maps/neighbourhoods-communities/ward-profiles/},
+}
+
+@Manual{torontodogbehavior,
+    title = {City of Toronto Taking Actions to Address Dangerous Dog Behaviour},
+    author = {City of Toronto},
+    year = {2023},  # Update with the actual year of publication if known
+    note = {Retrieved September 26, 2024},
+    url = {https://www.toronto.ca/news/city-of-toronto-taking-actions-to-address-dangerous-dog-behaviour/},
+}
+
 @Manual{citeR,
     title = {R: A Language and Environment for Statistical Computing},
     author = {{R Core Team}},
