--- a/paper/dog_report.qmd
+++ b/paper/dog_report.qmd
@@ -1,12 +1,11 @@
 ---
 title: "Analysis of Dog Bite Incidents by Breed: Patterns and Severity Across Toronto's Neighborhoods"
-subtitle: "My subtitle if needed"
 author: 
   - Sarah Lee
 thanks: "Code and data are available at: https://github.com/sarahhhh02/dangerous_dogs.git"
 date: today
 date-format: long
-abstract: "First sentence. Second sentence. Third sentence. Fourth sentence."
+abstract: "This study investigates dog incidents in Toronto from 2017 to 2024, analyzing trends related to the severity of attacks and the breeds involved. There has been a considerable increase of severe dog attacks, notably in 2022, indicating that societal and environemental variable are involved. According to statistics, certain breeds such as German Shepherds and Rottweilers, are deemed high-risk breeds due to their aggressive tendencies. Notably, our study identifies hot regions in Toronto, such as Toronto-Danforth, with the highest number of dog attacks. These findings highlight the need of targeted education and intervention efforts to improve public safety and promote better practices among dog owners, resulting in safer communities for both people and pets."
 format: pdf
 number-sections: true
 bibliography: references.bib
@@ -22,29 +21,29 @@ library(tidyverse)
 library(knitr)
 library(dplyr)
 library(ggplot2)
-
 ```
+
 # Introduction
 
-Dog bites represent a significant public safety concern, prompting ongoing discussions around breed-specific legislation and responsible pet ownership. As urban areas grow more populated, incidents of dog aggression can lead to serious injuries and heightened fear of certain breeds. However, discussing aggression solely to specific breeds overlooks the complex interplay of factors such as owner behavior, socialization, and environmental influences that contribute to canine aggression. Understanding these dynamics is essential for developing effective interventions that can give better practices and insights for dog ownership and public safety.
+Dog bites are a major public safety concern, generating from ongoing discussions about breed-specific legislation and proper pet ownership. As cities become increasingly populated, occurrences of dog aggressiveness can lead to serious injuries and heightened fear of certain breeds. However, discussing aggression solely to specific breeds overlooks the complex interaction of factors such as owner behavior, socialization, and environmental influences that contribute to canine aggression. Understanding these relationships is essential for developing effective interventions that can give better practices and insights into dog ownership and public safety.
 
-This study investigates reported data on dog attack incidents from 2017 to 2024, analyzing the severity of attacks across different breeds and tracking trends over the years. We also investigate the geographic distribution of incidents, examining the number of attacks reported in various ward areas, while also comparing incidents occurring in public versus private spaces. By discerning patterns from this data aim to inform future approaches to dog ownership and public policy. A notable gap in existing research is the overemphasis on breed as a determinant of aggression, often neglecting the significance of owner behavior and dog training practices. Additionally, there is lack of understanding regarding how these incidents have evolved over time.
+This study investigates reported data [@opendatatoronto] on dog attack incidences between 2017 to 2024, comparing the severity of attacks across different breeds and following trends over time. We also investigate the geographic distribution of incidents, examining the number of attacks recorded in various ward areas, while also comparing incidents in public versus private spaces. By identifying patterns from this data, we aim to guide future approaches to dog ownership and public policy. A notable gap in present research is the overemphasis on breed as a determinant of aggression, often neglecting the importance of owner behavior and dog training approaches. Additionally, there is lack of understanding regarding how these incidents have developed over time.
 
-Our findings reveal significant trends regarding the severity of attacks associated with various breeds, highlighting shifts from 2017 and 2024. Notably, that there is no consistent trend in incidents per specific breed, suggesting that promoting responsible ownership may be a more effective strategy than breed-specific legislation. We also identify key areas with higher incident rates and provide a comparative analysis of attacks that occur in public versus private settings. These insights are crucial for policymakers, dog owners, and community organizations, as they emphasize the importance of education and responsible ownership in mitigating dog attack incidents.
+Our findings reveal significant trends regarding the severity of attacks associated with various breeds, highlighting shifts from 2017 and 2024. Notably, there is no consistent trend in incidents per specific breed, suggesting that promoting responsible ownership may be a more successful technique than breed-specific laws. We also identify important areas with higher incident rates and provide a comparative analysis of attacks that occur in public versus private settings. These findings are critical for policymakers, dog owners, and community organizations, as they emphasize the role of education and responsible ownership in reducing dog attack incidents.
 
-The paper is structured as follows: we begin with a review of relevant literature on dog aggression and breed perception, followed by a detailed description of our dataset and methodologies. We then present our findings regarding breed-specific bite severity, geographic distribution of incidents, and the contrasting contexts of public versus private incidents. Finally, we conclude with recommendations aimed at enhancing dog safety and community awareness. We emphasize that effective solutions must transcend breed categorizations to address the root causes of aggression. Through this analysis, we seek to contribute to a more nuanced understanding of dog aggression that prioritizes responsible ownership over breed-based assumptions.
+The paper is structured as follows: we begin with a review of relevant data on dog aggression, followed by a detailed description of our dataset and methodologies. We then present our findings regarding breed-specific, severity level, geographic distribution of incidents, and the contrasting contexts of public versus private incidents. Finally, we conclude with what we can aim at enhancing dog safety and community awareness. We emphasize that effective solutions must look past breed categorizations to address the root causes of aggression. Through this analysis, we seek to contribute to a more nuanced understanding of dog aggression that prioritizes responsible ownership over breed-based assumptions.
 
 # Data
 
 ## Overview
 
-The R programming language [@citeR] were used to simulate and test the data set from Open Data Toronto. Tidyverse, dplry, ggplot2 were used to process the data and generate plots for this paper.
+The R programming language [@citeR] were used to simulate and test the data set from Open Data Toronto [@opendatatoronto]. Tidyverse [@tidyverse], dplyr [@dplyr], knitr [@rknitr], ggplot2 [@ggplot2] were used to process the data, generate plots and tables for this paper.
 
-The dataset, "Registry of Dogs Subject to and Issued a Dangerous Dog Order" was provided to Open Data Toronto by the City of Toronto. It contains records of dangerous dogs issued from 2017 to present listings of dangerous acts, dealing cases of bites, attacks, act of menacing behavior or a combination of these acts. Key variables in the raw dataset are the date (year, month and day), severity of the attack, breed type (including colour and name of dog), geographic distribution (such as the first three digits of postal codes, ward number, and area), and the location category (public versus private).
+The dataset, "Registry of Dogs Subject to and Issued a Dangerous Dog Order" was provided to Open Data Toronto [@opendatatoronto] by the City of Toronto [@torontodogbites]. It contains records of dangerous dogs issued from 2017 to present listings of dangerous acts, dealing cases of bites, attacks, act of menacing behavior or a combination of these acts [@torontodogbites]. Key variables in the raw dataset are the date (year, month and day), severity of the attack (severe, very severe, non severe, not a bite), breed type (including color and name of dog), geographic distribution (such as the first three digits of postal codes, ward number, and area), and the location category (public versus private).
 
-For this analysis, we selected the follwing variables in out cleaned dataset: year, breed, ward, bite type, ward area, and location type. By examining these variable, we aim to analyze trends in the severity of attacks over time geographic distribution, and breed type. This breakdown will help us understand how frequent and severity of dog attacks correlate with these factors, making way for future interventions.
+For this analysis, we selected the following variables in our cleaned dataset: year, breed, ward, bite type, ward area, and location type. By examining these variable, we aim to analyze trends in the severity of attacks over time geographic distribution, and breed type. This breakdown will help us understand how frequent and severity of dog attacks correlate with these factors, making way for future interventions.
 
-## Dog Attack Incidents per Year and Breed  {#sec-breed-year}
+## Dog Attack Incidents: Year and Breed {#sec-breed-year}
 
 ```{r}
 #| label: fig-1
@@ -74,7 +73,7 @@ severity_graph <- pivot_longer(severity_graph,
 
 # Create the stacked bar graph
 ggplot(severity_graph, aes(x = Year, y = Count, color = Severity, group = Severity)) +
-  geom_line(size = 1) +  # Add lines
+  geom_line(linewidth = 1) +  # Add lines
   geom_point(size = 2) + # Add points at each year
   labs(x = "Year",
        y = "Number of Incidents",
@@ -87,7 +86,7 @@ ggplot(severity_graph, aes(x = Year, y = Count, color = Severity, group = Severi
 
 ```
 
-@fig-1 illustrates dog attack incidents from 2017 and 2024, categorized by severity levels: "VERY SEVERE", "SEVERE", "NON SEVERE", and "NOT A BITE". Each severity level is represented by distinct colours, with the x-axis indicating the year and y-axis representing the number of incidents. This line graph highlights the trends and variations in dog attacks over time, facilitating easy comparisons among severity levels. The dataset suggest a count of incidents varied, with a consistent trend between 2017-2021 with a subsequent increase in 2021-2023. Followed by a drop in numbers by 2024, this fluctuation may indicate external factors during that time of period that may have affects the number of incidents.
+@fig-1 illustrates dog attack incidents from 2017 and 2024, categorized by severity levels: "VERY SEVERE", "SEVERE", "NON SEVERE", and "NOT A BITE". Each severity level is represented by distinct colors, with the x-axis indicating the year and y-axis representing the total number of incidents. This line graph highlights the trends and variations in dog attacks over time, facilitating easy comparisons among severity levels. The dataset suggest a consistent trend of the number of incidents varied between 2017-2021 with a subsequent increase in 2021-2023. Followed by a drop in numbers by 2024, this fluctuation may indicate external factors during that time of period, that may have affected the numbers.
 
 ```{r}
 #| label: fig-2
@@ -129,9 +128,9 @@ ggplot(breed_severity, aes(x = Count, y = Breed, fill = bite_type)) +
 
 ```
 
-@fig-2 presents a comparison of dog incidents by breed and severity for the years 2017 and 2024 using a stacked bar chart. Each breed is represented along the y-axis, while the x-axis display the number of incidents. The distinct colour codes represent the different severity levels, ranging from "NOT A BITE" to "VERY SEVERE". The chart is divided into two panels for each year, that allows for a clear visual comparison of how incidents have evolved over time. Trends show rise in the severity of dog attack incident from 2017 and 2024, where severe bites in 2017 accounted for 40% of reported incidents and 50% in 2024. We also notice that American Bulldogs have accounted for many cases in 2024, while displaying none in 2017. While on the other hand, German Shepherd have increased in cases of Non-severe attacks and a decrease in severe attacks from 2017 and 2024.
+@fig-2 presents a comparison of dog incidents by breed and severity for the years 2017 and 2024 using a stacked bar chart. Each breed is represented along the y-axis, while the x-axis display the number of incidents. The distinct color codes represent the different severity levels, ranging from "NOT A BITE" to "VERY SEVERE". The chart is divided into two panels for each year, that allows for a clear visual comparison of how incidents have evolved over time. Trends show rise in the severity of dog attack incident from 2017 and 2024, where severe bites in 2017 accounted for 40% of reported incidents and 50% in 2024. We also notice that American Bulldogs have accounted for many cases in 2024, while displaying none in 2017. While on the other hand, German Shepherd have increased in cases of Non-severe attacks and a decrease in severe attacks from 2017 to 2024.
 
-## Dog Attack Incidents per Geographic Area: Private Vs. Public  {#sec-location}
+## Dog Attack Incidents per Geographic Area: Private Vs. Public {#sec-location}
 
 ```{r}
 #| label: fig-3
@@ -166,7 +165,7 @@ ggplot(ward_counts, aes(x = reorder(ward, -incident_count), y = incident_count))
 
 ```
 
-@fig-3 displays the total number of dog incidents across various geographic areas (wards) from 2017 to 2024 using a horizontal bar chart. Each bar represents a ward and its corresponding incident count including a percentage of the total incidents they represent. This design effectively highlight variations in dog incident occurrences across the wards, making it easy to visually compare the data. @fig-3 suggests that Toronto-Danforth accounts for the highest area of dog attack incidents reported with 32 cases in the last 7 years (9%). Along with the next two highest number of reported cases in Scarborough Southwest (7%) and Beaches-East York (5.9%). The correlation of these wards show how closely they are next to each other near south of Toronto.
+@fig-3 displays the total number of dog incidents across various geographic areas (wards) from 2017 to 2024 using a horizontal bar chart. Each bar represents a ward and its corresponds the number of incidents including a percentage. This design effectively highlight variations in dog incidents across the wards, making it easy to visually compare the data. @fig-3 suggests that Toronto-Danforth accounts for the highest area of dog attack incidents reported with 32 cases in the last 7 years (9%). Along with the next two highest number of reported cases in Scarborough Southwest (7%) and Beaches-East York (5.9%).
 
 ```{r}
 #| label: fig-4
@@ -187,8 +186,7 @@ location_counts <-
 # Create the bar graph
 ggplot(location_counts, aes(x = reorder(location_type, -incident_count), y = incident_count, fill = location_type)) +
   geom_bar(stat = "identity") +
-  labs(title = "Dog Attack Incidents by Location Type",
-       x = "Location Type",
+  labs(x = "Location Type",
        y = "Number of Incidents") +
   theme_minimal() +
   theme(axis.text.x = element_text(angle = 45, hjust = 1),
@@ -196,13 +194,13 @@ ggplot(location_counts, aes(x = reorder(location_type, -incident_count), y = inc
 
 ```
 
-@fig-4 compares the total number of dog incidents that occurred in public versus private locations from 2017 to 2024 using a vertical bar chart. Each bar representing a location type-public or private-along with its corresponding incident count. The bars are colour-coded by location type and are arranged to clearly emphasize the differences in incident frequency. This graph effectively highlights how the setting of these incidents varies, providing valuable insight into where dog attacks are more prevalent. The data reveals a significant number of 163 incidents occurring in public spaces, which include parks-39 incidents in leash-required parks and 17 in leash-free zones. In contrast, private properties account for 107 incidents, with an additional 31 incidents occurring on the owner's property. This brings the totals to 219 attacks (61.4%) in public spaces compared to 138 (38.6%) in private properties. The stark contrast of numbers show us that public spaces need more attention when implementing future measures.
+@fig-4 compares the total number of dog incidents that occurred in public versus private locations from 2017 to 2024 using a vertical bar chart. Each bar representing a location type-public or private-along with its corresponding incident count. The bars are color-coded by location type and are arranged to clearly emphasize the differences in incident frequency. This graph effectively highlights how the setting of these incidents varies, providing valuable insight to where dog attacks are more prevalent. The data reveals a significant number of 163 incidents occurring in public spaces, which include parks-39 incidents in leash-required and 17 in leash-free zones. In contrast, private properties account for 107 incidents, with an additional 31 incidents occurring on owner property. This brings the totals to 219 attacks (61.4%) in public spaces compared to 138 (38.6%) in private properties. The stark contrast of numbers show us that public spaces need more attention when implementing future measures.
 
 # Discussion
 
-## Trends In Dog Attack Incidents: Breed Influence Over Time {#sec-first-point}
+## Trends on Dog Attacks Over Time: Breed Specific {#sec-first-point}
 
-A comparative analysis of dog bite data from 2017 to 2024 in @sec-breed-year reveals significant shifts in the severity of incidents over the years and the involvement of specific breeds. One prominent trend identified in @fig-1, is the increasing severity of dog attack incidents over the years. This escalation may be linked to evolving patterns in dog ownership, particularly during and after the pandemic. The significant spike in severe incidents, especially noted in 2022, underscores a critical period that was likely exacerbated by heightened stress and reduced socialization opportunities for dogs during the pandemic lock down in 2020-2021. Notably, @fig-1 illustrates a sharp rise in severe attacks between 2021 and 2022, peaking at 28 cases in 2022 and remaining notably high in subsequent years, particularly in 2023 with 47 cases. This highly suggest that pandemic-related factors heavily influenced dog behavior, as the inability to socialize dogs during that time may have increased the likelihood of aggressive incidents. While from 2023 and 2024, followed by a significant drop, this decline may suggest that there were targeted interventions and increased public awareness that ma have begun to yield positive results. This year-to-year variability in total incidents point from the influence of external factors such as enviromental conditions.
+A comparative analysis of dog attack data from 2017 to 2024 in @sec-breed-year reveals significant shifts in the severity of incidents over the years and the involvement of specific breeds. One prominent trend identified in @fig-1, is the increasing severity of dog attack incidents over the years. This escalation may be linked to evolving patterns in dog ownership, particularly during and after the pandemic. The significant spike in severe incidents, especially noted in 2022, underscores a critical period that was likely caused by high stress-levels and reduced socialization opportunities for dogs during the pandemic lock down in 2020-2021. Notably, @fig-1 illustrates a sharp rise in severe attacks between 2021 and 2022, peaking at 28 cases in 2022 and remaining notably high in subsequent years, particularly in 2023 with 47 cases. This highly suggest that pandemic-related factors heavily influenced dog behavior, as the inability to socialize dogs during that time may have increased the likelihood of aggression. While from 2023 and 2024, followed by a significant drop, this decline may suggest that there were targeted interventions and increased public awareness that may have resulted in positive results. This year-to-year variability in total incidents point from the influence of external factors such as environmental conditions.
 
 ```{r}
 #| label: tbl-breed-severity
@@ -211,7 +209,7 @@ A comparative analysis of dog bite data from 2017 to 2024 in @sec-breed-year rev
 #| warning: false
 
 # Load cleaned data
-clean_data <- read_csv("/Users/sarahlee/Documents/STA304/dangerous_dogs/dangerous_dogs/data/dangerous_dog_clean.csv")
+clean_data <- read_csv("/Users/sarahlee/Documents/STA304/dangerous_dogs/dangerous_dogs/data/dangerous_dog_clean.csv", show_col_types = FALSE)
 
 # Summarize the data by Breed
 breed_severity <- 
@@ -231,31 +229,25 @@ table |>
 
 ```
 
-On the other hand, when examining dog breeds, a key question arises: which breeds are more prone to aggressive behavior? Based on our data @tbl-breed-severity, certain breeds have consistently been linked to severe attack incidents, notably German Shepherds and Rottweilers. In @fig-2, data from 2017 indicates that these breeds are frequently associated with severe incidents, reflecting ongoing behavioural challenges that necessitate targeted training and awareness initiatives. By 2024, these breeds are reported with a mic of severe and non-severe attacks, underscoring a consistent risk.
+On the other hand, when examining dog breeds, a key question arises: which breeds are more prone to aggressive behavior? Based on our data in @tbl-breed-severity, certain breeds have consistently been linked to severe attack incidents, notably German Shepherds and Rottweilers. In @fig-2, data from 2017 indicates that these breeds are frequently associated with severe incidents, reflecting ongoing behavioral challenges that necessitate targeted training and awareness. By 2024, these breeds are reported with a both severe and non-severe attacks, underscoring a consistent risk.
 
-Interestingly, breeds such as the American Bulldog, Cane Corso, Belgian Malinois have begun to emerging, appearing more frequently in severe attack categories in @fig-2. This shift not only highlights change in breed popularity but also raises concerns about the temperment and socialization of these breeds. With a need for re-evaluation of public preceptions and training practives. Hence, labeling breeds as "dangerous" can perpetuate stigma and lead to ineffective breed-specific legislation and may not address the root causes of dog aggression.Additionally, it also suggests that breed type is irrelevent in canine aggression, as they only started to emerge aggression in later years. In 2024, mixed breeds, such as the American Bulldog mixes have shown a notable rise in severe incidents. Once again reflecting the growing acceptance and adoption of mixed breeds, yet also highlighting the importance of responsible ownership. Comparing the two years in @fig-2 suggest that 50% of reports were categorized as severe in 2024, while 40% in 2017. It’s worth noting that the high-risk breeds identified are predominantly medium to large dogs. Although smaller breeds like the Maltese appear on the list, their severity levels are considerably lower. This suggests that larger dogs pose a greater threat to public safety, though smaller dogs can still be a concern in certain contexts. Overall, high-risk breeds such as the American Bulldog, German Shepherd, and Rottweiler demonstrate a persistent association with severe incidents, also indicated in @tbl-breed-severity.
+Interestingly, breeds such as the American Bulldog, Cane Corso, Belgian Malinois have begun to emerge, appearing more frequently in severe attack categories, as shown in @fig-2. This shift not only highlights change in breed popularity but also raises concerns on the temperament and socialization of these breeds. Meaning, there is a need for re-evaluation of public perceptions and training practices. Hence, labeling breeds as "dangerous" can perpetuate stigma and lead to ineffective breed-specific law orders and may not address the root causes of dog aggression. Additionally, also suggesting that breed type is irrelevant in canine aggression, as breeds like the American Bulldog, only begun to emerge aggression in the later years. In 2024, mixed breeds, such as the American Bulldog mixes have shown a notable rise in severe incidents. Once again reflecting the growing acceptance and adoption of mixed breeds, yet also highlighting the importance of responsible ownership. Comparing the two years in @fig-2 suggest that 50% of reports were categorized as severe in 2024, while 40% in 2017. It’s worth noting that the high-risk breeds identified are predominantly medium to large sized dogs. Although smaller breeds like the Maltese appear on the list, their severity levels are considerably lower. This suggests that larger dogs pose a greater threat to public safety, though smaller dogs can still be a concern in certain contexts. Overall, high-risk breeds such as the American Bulldog, German Shepherd, and Rottweiler demonstrate a persistent association with severe incidents, also indicated in @tbl-breed-severity.
 
-In conclusion, the comparative analysis of dog bite incidents from 2017 to 2024 reveals significant trends that call for immediate attention. The increase in severity, and the consistent presence of high-risk breeds all point to the necessity for targeted interventions, community education, and ongoing monitoring. By addressing these issues, we can foster safer environments for both dogs and the communities they inhabit.In conclusion, the comparative analysis of dog bite incidents from 2017 to 2024 highlights significant trends that call for immediate attention.
+## Trends On Dog Attacks: Geographic Location
 
-## Trends In Dog Attack Incidents: Location
+The analysis of dog attack incidents across various wards in the Toronto area reveal significant geographic variations in both occurrence and potential severity. Understanding these patterns is crucial for developing targeted interventions that enhance community safety. As shown in @sec-location, @fig-3, the ward with the highest number of reported dog incidents is Toronto-Danforth, with 32 incidents, accounting for 9% of the total. Scarborough Southwest and Beaches-East York following with 25 (7%) and 21 (5.9%) incidents respectively. This concentration of incidents indicate that areas located South of Toronto [@torontowardprofiles] are in need for enhanced community education and targeted safety programs. The data clearly identifies high-risk zones, suggesting persistent environmental or social factors contributing to dog aggression. Furthermore, the analysis emphasizes the importance of geographical context in addressing public safety concerns. By identifying high-risk areas and understanding the factors contributing to dog aggression, stakeholders can implement targeted strategies to foster safer communities. Enhancing awareness, promoting responsible ownership, and establishing effective training programs are essential steps toward reducing dog attacks across Toronto [@torontodogbehavior].
 
-The analysis of dog attack incidents across various wards in the Toronto area reveals significant geographic variations in both occurrence and potential severity. Understanding these patterns is crucial for developing targeted interventions that enhance community safety and promote responsible dog ownership.
-
-As shown in @sec-location, @fig-3, the ward with the highest number of reported dog incidents is Toronto-Danforth, with 32 incidents, accounting for 9% of the total. Scarborough Southwest and Beaches-East York follow, reporting 25 (7%) and 21 (5.9%) incidents respectively. This concentration of incidents indicate that areas in South of Toronto are in need for enhanced community education and targeted safety programs. The data clearly identifies high-risk zones, sugessing persistent environmental or social factors contributing to dog aggression. Furthermore, the analysis emphazises the importance of geographcical context in addressing public safety concerns. of dog bite incidents by ward underscores the importance of geographic context in addressing public safety concerns. By identifying high-risk areas and understanding the factors contributing to dog aggression, stakeholders implement targeted strategies to foster safer communities. Enhancing awareness, promoting responsible ownership, and establishing effective training programs are essential steps toward reducing the incidence and severity of dog attacks across Toronto.
-
-While we have identified high-risk areas, it is also important to consider the settings of where these attacks occur. @fig-4 show that 61.4% of incidents take place in public spaces including parks (leash-required and leash-free), indicating a need for heightened safety measures in public. Notably, incidents are more frequent in public areas where leashes are required (10.9%) compared to leash-free zones (4.8%). This discrepancy suggest a need for figuring out what factors suggest canine aggression when leashed rather than being leash free. Additionally, a significant 30% of incidents occur on "Other Private Property," highlighting the need for increased awareness around responsible pet ownership and proper fencing in these areas. While incidents occurring on the owner's property account for 8.7% of the total. While public areas report more incidents overall, the significance of attacks in private settings should not be overlooked.
-
-The analysis of dog bite incidents underscores the necessity of understanding geographic context in public safety. By pinpointing high-risk areas and recognizing the contributing factors to dog aggression, stakeholders can implement targeted strategies to create safer communities. Enhancing awareness, promoting responsible ownership, and establishing effective training programs are essential steps to reduce the incidence and severity of dog bites across Toronto.
+While we have identified high-risk areas, it is also important to consider the settings of where these attacks occur. @fig-4 show that 61.4% of incidents take place in public spaces including parks (leash-required and leash-free), indicating a need for heightened safety measures in public. Notably, incidents are more frequent in public areas where leashes are required (10.9%) compared to leash-free zones (4.8%). This discrepancy suggest a need for researching what factors suggest canine aggression when leashed rather than being leash free. Additionally, a significant 30% of incidents occur on "Other Private Property," highlighting the need for increased awareness around responsible pet ownership and proper fencing in these areas. While incidents occurring on the owner's property account for 8.7% of the total. While public areas report more incidents overall, the significance of attacks in private settings should not be overlooked.
 
 ## Weaknesses and Next Steps
 
-A significant gap in the current analysis is the lack of detailed data regarding the severity of incidents by location and breed type. While the overall counts provide a snapshot of occurrences, understanding how severity varies within specific wards and breeds is crucial for informing targeted interventions. For instance, high-frequency areas like Toronto-Danforth may require different strategies based on the severity of incidents reported, there are no other external that indicate what resources are in need for efficiently addressing the challenge. Moreover, although we see a emergence of certain breeds such as the American bulldog associated with severe incidents of attacks, we do not know the cause of which may have led this. It could be from the lack of social exposure, lack of training, breed tendencies, or environmental factors. The prevalence of dog ownership during and after the pandemic may have also influenced behavior and bite rates, as more dogs were adopted and possibly less socialized.
+A significant gap in the current analysis is the lack of detailed data regarding the severity of incidents by location and breed type. While the overall counts provide a snapshot of occurrences, understanding how severity varies within specific wards and breeds is crucial for targeted interventions. For instance, high-frequency areas like Toronto-Danforth may require different strategies based on the severity of incidents reported, there are no other external resources that indicate what is in need for addressing the challenge. The analysis reveals a weak emphasis on the environmental and social factors that contribute to dog aggression in high-risk areas. Factors such as neighborhood dynamics, population density, and public space management play critical roles in shaping dog behavior and the prevalence of bite incidents. Addressing these broader social influences is essential for developing comprehensive strategies that extend beyond individual dog training to encompass community-level interventions. Integrating these considerations into future plans could lead to more sustainable solutions for reducing dog attacks.
 
-Another notable weakness lies in the inconsistency in reporting mechanisms for dog bite incidents. The variability in reported incidents suggests that not all occurrences are being documented, particularly in private settings. The increase in reported severe incidents in @fig-1 from 2017 and 2024 may have been influencd by heightended awareness and reporting mechanisms in place. Improved awareness and accessibility for residents to report incidents could enhance data accuracy and comprehensiveness, enabling more effective responses from local authorities.
+Another notable weakness lies in the inconsistency in reporting mechanisms for dog attacks. The variability in reported incidents suggests that not all occurrences are being documented, particularly in private settings. The increase in reported severe incidents in @fig-1 from 2017 and 2024 may have been influenced by heightened awareness and reporting mechanisms in place. Improved awareness and accessibility for residents to report incidents could enhance data accuracy and comprehensiveness, enabling more effective responses from local authorities.
 
-Moreover, there is also a noticeable gap in community engagement and education surrounding responsible dog ownership. Although the data indicates a need for targeted interventions, there are insufficient ongoing programs aimed at educating residents about dog behavior, training, and safety measures. Without active community participation, initiatives may lack effectiveness and fail to address the root causes of aggression. Fostering a culture of responsible pet ownership through community-driven programs could help mitigate risks associated with dog bites.
+Moreover, there is also a noticeable gap in community engagement and education surrounding responsible dog ownership. Although the data indicates a need for targeted interventions, there are insufficient ongoing programs aimed at educating residents about dog behavior, training, and safety measures [@torontodogbehavior]. Without active community participation, initiatives may lack effectiveness and fail to address the root causes of aggression. Fostering a culture of responsible pet ownership through community-driven programs could help reduce dog attacks.
 
-Lastly, the analysis reveals a weak emphasis on the environmental and social factors that contribute to dog aggression in high-risk areas. Factors such as neighborhood dynamics, population density, and public space management play critical roles in shaping dog behavior and the prevalence of bite incidents. Addressing these broader social influences is essential for developing comprehensive strategies that extend beyond individual dog training to encompass community-level interventions. Integrating these considerations into future plans could lead to more sustainable solutions for reducing dog bites. The data underscores the complexity of dog behavior, where breed tendencies can indicate potential risks, but individual factors like training, socialization, and owner experience play crucial roles. Understanding these dynamics can empower prospective dog owners to make informed decisions, fostering safer interactions between humans and their canine companions.
+Lastly, the data underscores the complexity of dog behavior, where breed tendencies can indicate potential risks, but individual factors like training, socialization, and owner experience play crucial roles. To illustrate, although we see an emergence of certain breeds such as the American Bulldog associated with severe incidents of attacks, we do not know the cause of which may have led this aggression. It could been from the lack of social exposure, lack of training, breed tendencies, or environmental factors (such as act of self-defense). The prevalence of dog ownership during and after the pandemic may have also influenced behavior and attack rates, as more dogs were adopted and possibly less socialized during that time frame. Understanding these dynamics can empower prospective dog owners to make informed decisions, fostering safer interactions between humans and their canine companions.
 
 \newpage
 
