--- a/paper/references.bib
+++ b/paper/references.bib
@@ -25,7 +25,7 @@
 @Manual{torontodogbehavior,
     title = {City of Toronto Taking Actions to Address Dangerous Dog Behaviour},
     author = {City of Toronto},
-    year = {2023},  # Update with the actual year of publication if known
+    year = {2023}, 
     note = {Retrieved September 26, 2024},
     url = {https://www.toronto.ca/news/city-of-toronto-taking-actions-to-address-dangerous-dog-behaviour/},
 }
