--- a/paper/dog_report.qmd
+++ b/paper/dog_report.qmd
@@ -25,11 +25,11 @@ library(ggplot2)
 
 # Introduction
 
-Dog bites are a major public safety concern, generating from ongoing discussions about breed-specific legislation and proper pet ownership. As cities become increasingly populated, occurrences of dog aggressiveness can lead to serious injuries and heightened fear of certain breeds. However, discussing aggression solely to specific breeds overlooks the complex interaction of factors such as owner behavior, socialization, and environmental influences that contribute to canine aggression. Understanding these relationships is essential for developing effective interventions that can give better practices and insights into dog ownership and public safety.
+Dog bites are a major public safety concern, generating from ongoing discussions about breed-specific legislation and proper pet ownership. As cities become increasingly populated, occurrences of dog aggressiveness can lead to serious injuries and heightened fear of certain breeds. However, discussing aggression solely to specific breeds overlooks the complex interaction of factors such as owner behavior, socialization, and environmental influences that contribute to canine aggression. Understanding these relationships is essential for developing effective interventions that can give better practices and understanding into dog ownership and public safety.
 
 This study investigates reported data [@opendatatoronto] on dog attack incidences between 2017 to 2024, comparing the severity of attacks across different breeds and following trends over time. We also investigate the geographic distribution of incidents, examining the number of attacks recorded in various ward areas, while also comparing incidents in public versus private spaces. By identifying patterns from this data, we aim to guide future approaches to dog ownership and public policy. A notable gap in present research is the overemphasis on breed as a determinant of aggression, often neglecting the importance of owner behavior and dog training approaches. Additionally, there is lack of understanding regarding how these incidents have developed over time.
 
-Our findings reveal significant trends regarding the severity of attacks associated with various breeds, highlighting shifts from 2017 and 2024. Notably, there is no consistent trend in incidents per specific breed, suggesting that promoting responsible ownership may be a more successful technique than breed-specific laws. We also identify important areas with higher incident rates and provide a comparative analysis of attacks that occur in public versus private settings. These findings are critical for policymakers, dog owners, and community organizations, as they emphasize the role of education and responsible ownership in reducing dog attack incidents.
+Our findings give way significant trends regarding the severity of attacks associated with various breeds, highlighting shifts from 2017 and 2024. Notably, there is no consistent trend in incidents per specific breed, suggesting that promoting responsible ownership may be a more successful technique than breed-specific laws. We also identify important areas with higher incident rates and provide a comparative analysis of attacks that occur in public versus private settings. These findings are critical for policymakers, dog owners, and community organizations, as they emphasize the role of education and responsible ownership in reducing dog attack incidents.
 
 The paper is structured as follows: we begin with a review of relevant data on dog aggression, followed by a detailed description of our dataset and methodologies. We then present our findings regarding breed-specific, severity level, geographic distribution of incidents, and the contrasting contexts of public versus private incidents. Finally, we conclude with what we can aim at enhancing dog safety and community awareness. We emphasize that effective solutions must look past breed categorizations to address the root causes of aggression. Through this analysis, we seek to contribute to a more nuanced understanding of dog aggression that prioritizes responsible ownership over breed-based assumptions.
 
@@ -194,7 +194,7 @@ ggplot(location_counts, aes(x = reorder(location_type, -incident_count), y = inc
 
 ```
 
-@fig-4 compares the total number of dog incidents that occurred in public versus private locations from 2017 to 2024 using a vertical bar chart. Each bar representing a location type-public or private-along with its corresponding incident count. The bars are color-coded by location type and are arranged to clearly emphasize the differences in incident frequency. This graph effectively highlights how the setting of these incidents varies, providing valuable insight to where dog attacks are more prevalent. The data reveals a significant number of 163 incidents occurring in public spaces, which include parks-39 incidents in leash-required and 17 in leash-free zones. In contrast, private properties account for 107 incidents, with an additional 31 incidents occurring on owner property. This brings the totals to 219 attacks (61.4%) in public spaces compared to 138 (38.6%) in private properties. The stark contrast of numbers show us that public spaces need more attention when implementing future measures.
+@fig-4 compares the total number of dog incidents that occurred in public versus private locations from 2017 to 2024 using a vertical bar chart. Each bar representing a location type-public or private-along with its corresponding incident count. The bars are color-coded by location type and are arranged to clearly emphasize the differences in incident frequency. This graph effectively highlights how the setting of these incidents varies, providing valuable understanding to where dog attacks are more prevalent. The data reveals a significant number of 163 incidents occurring in public spaces, which include parks-39 incidents in leash-required and 17 in leash-free zones. In contrast, private properties account for 107 incidents, with an additional 31 incidents occurring on owner property. This brings the totals to 219 attacks (61.4%) in public spaces compared to 138 (38.6%) in private properties. The stark contrast of numbers show us that public spaces need more attention when implementing future measures.
 
 # Discussion
 
@@ -235,19 +235,19 @@ Interestingly, breeds such as the American Bulldog, Cane Corso, Belgian Malinois
 
 ## Trends On Dog Attacks: Geographic Location
 
-The analysis of dog attack incidents across various wards in the Toronto area reveal significant geographic variations in both occurrence and potential severity. Understanding these patterns is crucial for developing targeted interventions that enhance community safety. As shown in @sec-location, @fig-3, the ward with the highest number of reported dog incidents is Toronto-Danforth, with 32 incidents, accounting for 9% of the total. Scarborough Southwest and Beaches-East York following with 25 (7%) and 21 (5.9%) incidents respectively. This concentration of incidents indicate that areas located South of Toronto [@torontowardprofiles] are in need for enhanced community education and targeted safety programs. The data clearly identifies high-risk zones, suggesting persistent environmental or social factors contributing to dog aggression. Furthermore, the analysis emphasizes the importance of geographical context in addressing public safety concerns. By identifying high-risk areas and understanding the factors contributing to dog aggression, stakeholders can implement targeted strategies to foster safer communities. Enhancing awareness, promoting responsible ownership, and establishing effective training programs are essential steps toward reducing dog attacks across Toronto [@torontodogbehavior].
+The analysis of dog attack incidents across various wards in the Toronto area give way significant geographic variations in both occurrence and potential severity. Understanding these patterns is important for developing targeted interventions that enhance community safety. As shown in @sec-location, @fig-3, the ward with the highest number of reported dog incidents is Toronto-Danforth, with 32 incidents, accounting for 9% of the total. Scarborough Southwest and Beaches-East York following with 25 (7%) and 21 (5.9%) incidents respectively. This concentration of incidents indicate that areas located South of Toronto [@torontowardprofiles] are in need for enhanced community education and targeted safety programs. The data clearly identifies high-risk zones, suggesting persistent environmental or social factors contributing to dog aggression. Furthermore, the analysis emphasizes the importance of geographical context in addressing public safety concerns. By identifying high-risk areas and understanding the factors contributing to dog aggression, stakeholders can implement targeted strategies to foster safer communities. Enhancing awareness, promoting responsible ownership, and establishing effective training programs are essential steps toward reducing dog attacks across Toronto [@torontodogbehavior].
 
 While we have identified high-risk areas, it is also important to consider the settings of where these attacks occur. @fig-4 show that 61.4% of incidents take place in public spaces including parks (leash-required and leash-free), indicating a need for heightened safety measures in public. Notably, incidents are more frequent in public areas where leashes are required (10.9%) compared to leash-free zones (4.8%). This discrepancy suggest a need for researching what factors suggest canine aggression when leashed rather than being leash free. Additionally, a significant 30% of incidents occur on "Other Private Property," highlighting the need for increased awareness around responsible pet ownership and proper fencing in these areas. While incidents occurring on the owner's property account for 8.7% of the total. While public areas report more incidents overall, the significance of attacks in private settings should not be overlooked.
 
 ## Weaknesses and Next Steps
 
-A significant gap in the current analysis is the lack of detailed data regarding the severity of incidents by location and breed type. While the overall counts provide a snapshot of occurrences, understanding how severity varies within specific wards and breeds is crucial for targeted interventions. For instance, high-frequency areas like Toronto-Danforth may require different strategies based on the severity of incidents reported, there are no other external resources that indicate what is in need for addressing the challenge. The analysis reveals a weak emphasis on the environmental and social factors that contribute to dog aggression in high-risk areas. Factors such as neighborhood dynamics, population density, and public space management play critical roles in shaping dog behavior and the prevalence of bite incidents. Addressing these broader social influences is essential for developing comprehensive strategies that extend beyond individual dog training to encompass community-level interventions. Integrating these considerations into future plans could lead to more sustainable solutions for reducing dog attacks.
+A significant gap in the current analysis is the lack of detailed data regarding the severity of incidents by location and breed type. While the overall counts provide a snapshot of occurrences, understanding how severity varies within specific wards and breeds is important for targeted interventions. For instance, high-frequency areas like Toronto-Danforth may require different strategies based on the severity of incidents reported, there are no other external resources that indicate what is in need for addressing the challenge. The analysis reveals a weak emphasis on the environmental and social factors that contribute to dog aggression in high-risk areas. Factors such as neighborhood dynamics, population density, and public space management play critical roles in shaping dog behavior and the prevalence of bite incidents. Addressing these broader social influences is essential for developing comprehensive strategies that extend beyond individual dog training to encompass community-level interventions. Integrating these considerations into future plans could lead to more sustainable solutions for reducing dog attacks.
 
 Another notable weakness lies in the inconsistency in reporting mechanisms for dog attacks. The variability in reported incidents suggests that not all occurrences are being documented, particularly in private settings. The increase in reported severe incidents in @fig-1 from 2017 and 2024 may have been influenced by heightened awareness and reporting mechanisms in place. Improved awareness and accessibility for residents to report incidents could enhance data accuracy and comprehensiveness, enabling more effective responses from local authorities.
 
 Moreover, there is also a noticeable gap in community engagement and education surrounding responsible dog ownership. Although the data indicates a need for targeted interventions, there are insufficient ongoing programs aimed at educating residents about dog behavior, training, and safety measures [@torontodogbehavior]. Without active community participation, initiatives may lack effectiveness and fail to address the root causes of aggression. Fostering a culture of responsible pet ownership through community-driven programs could help reduce dog attacks.
 
-Lastly, the data underscores the complexity of dog behavior, where breed tendencies can indicate potential risks, but individual factors like training, socialization, and owner experience play crucial roles. To illustrate, although we see an emergence of certain breeds such as the American Bulldog associated with severe incidents of attacks, we do not know the cause of which may have led this aggression. It could been from the lack of social exposure, lack of training, breed tendencies, or environmental factors (such as act of self-defense). The prevalence of dog ownership during and after the pandemic may have also influenced behavior and attack rates, as more dogs were adopted and possibly less socialized during that time frame. Understanding these dynamics can empower prospective dog owners to make informed decisions, fostering safer interactions between humans and their canine companions.
+Lastly, the data underscores the complexity of dog behavior, where breed tendencies can indicate potential risks, but individual factors like training, socialization, and owner experience play key roles. To illustrate, although we see an emergence of certain breeds such as the American Bulldog associated with severe incidents of attacks, we do not know the cause of which may have led this aggression. It could been from the lack of social exposure, lack of training, breed tendencies, or environmental factors (such as act of self-defense). The prevalence of dog ownership during and after the pandemic may have also influenced behavior and attack rates, as more dogs were adopted and possibly less socialized during that time frame. Understanding these dynamics can empower prospective dog owners to make informed decisions, fostering safer interactions between humans and their canine companions.
 
 \newpage
 
